[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://data/exam_btn_group.tres" type="ButtonGroup" id=2]
[ext_resource path="res://data/profile_btn_group.tres" type="ButtonGroup" id=3]
[ext_resource path="res://scenes/NewProfile.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://scripts/Leaderboard.gd" type="Script" id=6]
[ext_resource path="res://scenes/LeaderboardRow.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/fonts/dejavu_sans_mono.tres" type="DynamicFont" id=8]
[ext_resource path="res://data/lang_btn_group.tres" type="ButtonGroup" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 18.0
margin_right = -34.0
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 306.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="Profile0" type="Button" parent="HBoxContainer/Profile"]
margin_right = 306.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 3 )
text = "Papa"

[node name="Profile1" type="Button" parent="HBoxContainer/Profile"]
margin_top = 107.0
margin_right = 306.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 3 )
text = "Clara"

[node name="Profile2" type="Button" parent="HBoxContainer/Profile"]
margin_top = 214.0
margin_right = 306.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 3 )
text = "Lily"

[node name="Profile3" type="Button" parent="HBoxContainer/Profile"]
margin_top = 321.0
margin_right = 306.0
margin_bottom = 414.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 3 )
text = "Maman"

[node name="Control" type="Control" parent="HBoxContainer/Profile"]
margin_top = 428.0
margin_right = 306.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddProfile" type="Button" parent="HBoxContainer/Profile/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -46.5
margin_right = 53.5
margin_bottom = 46.5
rect_min_size = Vector2( 50, 50 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 310.0
margin_right = 325.0
margin_bottom = 556.0
custom_constants/separation = 15

[node name="Exam" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 329.0
margin_right = 635.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="Play10" type="Button" parent="HBoxContainer/Exam"]
margin_right = 306.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 2 )
text = "10"

[node name="Play20" type="Button" parent="HBoxContainer/Exam"]
margin_top = 107.0
margin_right = 306.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 2 )
text = "20"

[node name="Play50" type="Button" parent="HBoxContainer/Exam"]
margin_top = 214.0
margin_right = 306.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 70 )
toggle_mode = true
group = ExtResource( 2 )
text = "50"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Exam"]
margin_top = 321.0
margin_right = 306.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Exam/VBoxContainer"]
margin_right = 306.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="French" type="CheckBox" parent="HBoxContainer/Exam/VBoxContainer"]
margin_top = 139.0
margin_right = 306.0
margin_bottom = 185.0
custom_fonts/font = ExtResource( 8 )
pressed = true
group = ExtResource( 9 )
text = "Fran√ßais"

[node name="English" type="CheckBox" parent="HBoxContainer/Exam/VBoxContainer"]
margin_top = 189.0
margin_right = 306.0
margin_bottom = 235.0
custom_fonts/font = ExtResource( 8 )
group = ExtResource( 9 )
text = "English"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 639.0
margin_right = 654.0
margin_bottom = 556.0
custom_constants/separation = 15

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 658.0
margin_right = 964.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 56.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardRow" parent="HBoxContainer/Control/TabContainer/10" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 298.0
margin_bottom = 35.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Control/TabContainer/10"]
margin_top = 39.0
margin_right = 298.0
margin_bottom = 54.0
custom_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Control/TabContainer/10"]
margin_top = 58.0
margin_right = 298.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer/10/ScrollContainer"]
margin_right = 298.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
Row = ExtResource( 7 )

[node name="20" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 56.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardRow" parent="HBoxContainer/Control/TabContainer/20" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 298.0
margin_bottom = 35.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Control/TabContainer/20"]
margin_top = 39.0
margin_right = 298.0
margin_bottom = 54.0
custom_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Control/TabContainer/20"]
margin_top = 58.0
margin_right = 298.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer/20/ScrollContainer"]
margin_right = 298.0
margin_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
Row = ExtResource( 7 )
GameCount = 20

[node name="50" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 56.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardRow" parent="HBoxContainer/Control/TabContainer/50" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 298.0
margin_bottom = 35.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Control/TabContainer/50"]
margin_top = 39.0
margin_right = 298.0
margin_bottom = 54.0
custom_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Control/TabContainer/50"]
margin_top = 58.0
margin_right = 298.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="VBoxContainer" parent="HBoxContainer/Control/TabContainer/50/ScrollContainer"]
margin_right = 298.0
margin_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
Row = ExtResource( 7 )
GameCount = 50

[node name="NewProfile" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="toggled" from="HBoxContainer/Exam/Play10" to="." method="_on_Play10_toggled"]
[connection signal="toggled" from="HBoxContainer/Exam/Play20" to="." method="_on_Play20_toggled"]
[connection signal="toggled" from="HBoxContainer/Exam/Play50" to="." method="_on_Play50_toggled"]
[connection signal="pressed" from="HBoxContainer/Exam/VBoxContainer/French" to="." method="_on_French_pressed"]
[connection signal="pressed" from="HBoxContainer/Exam/VBoxContainer/English" to="." method="_on_English_pressed"]
